parser/src/lexer_v2/snapshots/rustpython_parser__lexer_v2__tests__comment.snap
---
source: parser/src/lexer_v2/mod.rs
expression: tokens
---
[
    Token {
        kind: Comment,
        length: 16,
        value: String(
            "# Module comment",
        ),
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: NonLogicalNewline,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: NonLogicalNewline,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: Comment,
        length: 18,
        value: String(
            "# New line comment",
        ),
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: NonLogicalNewline,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: NonLogicalNewline,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: Whitespace,
        length: 4,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: Comment,
        length: 18,
        value: String(
            "# Indented comment",
        ),
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: NonLogicalNewline,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: EndOfFile,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
]
